244Initials/force-app/main/default/objects/Lead/fields/ARC__c.field-meta.xml
<CustomField>
    <fullName>ARC__c</fullName>
    <inlineHelpText>Annual Reoccurring Charges</inlineHelpText>
    <label>ARC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>