244Initials/force-app/main/default/objects/Lead/fields/ARTL_Account_Owner_Equals_Lead_Owner__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Account_Owner_Equals_Lead_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ARTL Account Owner Equals Lead Owner</label>
    <type>Checkbox</type>
</CustomField>