244Initials/force-app/main/default/objects/Lead/fields/ARTL_Closed_Lost_Or_Dropped__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Closed_Lost_Or_Dropped__c</fullName>
    <label>Closed Lost/Close Dropped</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Better Solution of Competition</fullName>
            </value>
            <value>
                <fullName>Better Pricing of Competitor</fullName>
            </value>
            <value>
                <fullName>Solution not Feasible</fullName>
            </value>
            <value>
                <fullName>Purchase Postponed</fullName>
            </value>
            <value>
                <fullName>No Requirement</fullName>
            </value>
            <value>
                <fullName>Customer not Responding</fullName>
            </value>
            <value>
                <fullName>Budget Issue</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>