244Initials/force-app/main/default/objects/Lead/fields/ARTL_Competitor_Pricing__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Competitor_Pricing__c</fullName>
    <label>Competitor Pricing</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>