244Initials/force-app/main/default/objects/Lead/fields/ARTL_Last_Activity_Date_Updated__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Last_Activity_Date_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Last Activity Date Updated</label>
    <type>Checkbox</type>
</CustomField>