244Initials/force-app/main/default/objects/Lead/fields/ARTL_LastActivityForm__c.field-meta.xml
<CustomField>
    <fullName>ARTL_LastActivityForm__c</fullName>
    <formula>LastActivityDate</formula>
    <label>LastActivityForm</label>
    <type>Date</type>
</CustomField>