244Initials/force-app/main/default/objects/Lead/fields/ARTL_Order_Lost_to_Whom__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Order_Lost_to_Whom__c</fullName>
    <label>Order Lost to Whom</label>
    <length>255</length>
    <type>Text</type>
</CustomField>