244Initials/force-app/main/default/objects/Lead/fields/ARTL_Related_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Related_Account_Number__c</fullName>
    <label>Related Account Number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>