244Initials/force-app/main/default/objects/Lead/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <label>Campaign</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AB Insights</fullName>
            </value>
            <value>
                <fullName>Adroit Outbound</fullName>
            </value>
            <value>
                <fullName>Airtel B2</fullName>
            </value>
            <value>
                <fullName>CAB Initiative</fullName>
            </value>
            <value>
                <fullName>CART Series</fullName>
            </value>
            <value>
                <fullName>Denave Denave</fullName>
            </value>
            <value>
                <fullName>Digital Inbound</fullName>
            </value>
            <value>
                <fullName>Digital Inbound-Campaigns</fullName>
            </value>
            <value>
                <fullName>DSR</fullName>
            </value>
            <value>
                <fullName>Erflog Erflog</fullName>
            </value>
            <value>
                <fullName>GB CallBox</fullName>
            </value>
            <value>
                <fullName>GB Digital Outreach</fullName>
            </value>
            <value>
                <fullName>GB Events</fullName>
            </value>
            <value>
                <fullName>Golf Event</fullName>
            </value>
            <value>
                <fullName>ILMS ILMS</fullName>
            </value>
            <value>
                <fullName>Industry Events (IE)</fullName>
            </value>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
            <value>
                <fullName>Nxtra Connect</fullName>
            </value>
            <value>
                <fullName>Security – DDoS GTM</fullName>
            </value>
            <value>
                <fullName>Security - iSOC GTM</fullName>
            </value>
            <value>
                <fullName>SOC Visit</fullName>
            </value>
            <value>
                <fullName>YourStory</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>