244Initials/force-app/main/default/objects/Lead/fields/Competition__c.field-meta.xml
<CustomField>
    <fullName>Competition__c</fullName>
    <label>Competition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not yet uploaded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>