244Initials/force-app/main/default/objects/Lead/fields/Docurl__c.field-meta.xml
<CustomField>
    <fullName>Docurl__c</fullName>
    <label>Docurl</label>
    <type>Url</type>
</CustomField>