244Initials/force-app/main/default/objects/Lead/fields/Lead_Action_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Lead_Action_Remarks__c</fullName>
    <label>Lead Action Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>