244Initials/force-app/main/default/objects/Lead/fields/Lead_Product__c.field-meta.xml
<CustomField>
    <fullName>Lead_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>