244Initials/force-app/main/default/objects/Lead/fields/Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Lost_Reason__c</fullName>
    <label>Lost Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Not Interested</fullName>
            </value>
            <value>
                <fullName>Customer Not Reachable</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Not yet uploaded</fullName>
                <isActive>false</isActive>
                <label>Not yet uploaded</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>