244Initials/force-app/main/default/objects/Lead/fields/Lost_Reason_Other__c.field-meta.xml
<CustomField>
    <fullName>Lost_Reason_Other__c</fullName>
    <label>Lost Reason Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>