244Initials/force-app/main/default/objects/Lead/fields/Profile_RFP_URL__c.field-meta.xml
<CustomField>
    <fullName>Profile_RFP_URL__c</fullName>
    <label>Profile / RFP URL</label>
    <type>Url</type>
</CustomField>