244Initials/force-app/main/default/objects/Lead/fields/Project_Defined__c.field-meta.xml
<CustomField>
    <fullName>Project_Defined__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Project Defined</label>
    <type>Checkbox</type>
</CustomField>