244Initials/force-app/main/default/objects/Lead/fields/Remarks__c.field-meta.xml
<CustomField>
    <fullName>Remarks__c</fullName>
    <label>Remarks</label>
    <length>150</length>
    <type>Text</type>
</CustomField>