244Initials/force-app/main/default/objects/Lead/fields/vlocity_cmt__NumberofLocations__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__NumberofLocations__c</fullName>
    <label>Number of Locations</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>