244Initials/force-app/main/default/objects/Lead/fields/vlocity_cmt__PremisesId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__PremisesId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Premises</label>
    <referenceTo>vlocity_cmt__Premises__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>