244Initials/force-app/main/default/objects/Lead/fields/vlocity_cmt__ProductInterest__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__ProductInterest__c</fullName>
    <description>Picklist outlining the category of this lead&apos;s primary product interest. Customize as desired.</description>
    <label>Product Interest</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GC1000 series</fullName>
            </value>
            <value>
                <fullName>GC3000 series</fullName>
            </value>
            <value>
                <fullName>GC5000 series</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>