244Initials/force-app/main/default/objects/Lead/fields/vlocity_cmt__ProductInterestData__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__ProductInterestData__c</fullName>
    <description>JSON (or similar) structured data describing the set of, or types of, products in which this lead is interested.</description>
    <label>Product Interest Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>