244Initials/force-app/main/default/objects/Lead/fields/vlocity_cmt_ProductInterest__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt_ProductInterest__c</fullName>
    <label>Product Interest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yet to upload</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>