244Initials/force-app/main/default/objects/Lead/validationRules/ARTL_LostReasonOtherRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>ARTL_LostReasonOtherRequired</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(  ARTL_Closed_Lost_Or_Dropped__c  , &quot;Others&quot;),
 ISBLANK(Lost_Reason_Other__c) 

)</errorConditionFormula>
    <errorMessage>Lost Reason other is Required.</errorMessage>
</ValidationRule>