244Initials/force-app/main/default/objects/Lead/validationRules/ARTL_StatusChange.validationRule-meta.xml
<ValidationRule>
    <fullName>ARTL_StatusChange</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Status, &quot;Closed Dropped&quot;),
            TEXT(Lost_Reason__c) = &quot;&quot;
      
)</errorConditionFormula>
    <errorMessage>Lost Reason is required when Status is Closed Dropped.</errorMessage>
</ValidationRule>