244Initials/force-app/main/default/objects/Lead/listViews/Pending_Account_Lead_Lead.listView-meta.xml
<ListView>
    <fullName>Pending_Account_Lead_Lead</fullName>
    <columns>FULL_NAME</columns>
    <columns>Related_Account__c</columns>
    <columns>Related_Contact__c</columns>
    <columns>LEAD.TITLE</columns>
    <columns>Segment__c</columns>
    <columns>ARC__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Queue</filterScope>
    <label>Pending Account Lead</label>
    <queue>Pending_Account_Lead</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>